Revert "fixed textarea border-radius on mobile (this one worked)"
This reverts commit 87893e002af327967a53c4581bd5519556c60bec.

--- a/src/index.css
+++ b/src/index.css
@@ -309,8 +309,8 @@ body {
   resize: none;
   border: none;
   /* remove textarea rounding */
-  border-radius: 0;
-  -webkit-appearance: none;
+  border-radius: none;
+  -webkit-appearance: textarea;
   appearance: none;
 }
 
